# OctoPrint-GoogleDriveBackup

./: LICENSE  MANIFEST.in  README.md  SUMMARY.md  Taskfile.yml  client_secrets.json.bak  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: blank.yml  master.yml
docs/: Gemfile  README.md  SUMMARY.md  configuration.md  create-a-google-oauth-app.md  index.html
docs/_includes/: navbar.html
docs/_layouts/: base.html
docs/prerequisites/: README.md  create-a-google-oauth-app.md
docs/static/js/: helpers.js
extras/: README.txt  googledrivebackup.md
octoprint_googledrivebackup/: __init__.py
octoprint_googledrivebackup/static/js/: googledrivebackup.js
octoprint_googledrivebackup/templates/: googledrivebackup_settings.jinja2
translations/: README.txt
